[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Sample/LaserGun.png" type="Texture" id=1]
[ext_resource path="res://Player/Medieval/Weapon.gd" type="Script" id=2]

[node name="Weapon" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Weapon_Sprite" type="Sprite" parent="."]
position = Vector2( 2, -2.38419e-07 )
z_index = 1
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 2, -2.38419e-07 )
polygon = PoolVector2Array( -5, -2, -2, -2, -2, -3, 4, -3, 4, -2, 5, -2, 5, -3, 8, -3, 8, 2, 5, 2, 5, 1, 4, 1, 4, 2, 2, 2, 2, 3, 0, 3, 0, 2, -2, 2, -2, 1, -5, 1, -5, 2, -8, 2, -8, -3, -5, -3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="AttackCollide" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 140

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackCollide"]
polygon = PoolVector2Array( 10, -1, 4, -3, -6, -2, -6, 0, 3, 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="AttackCollide" to="." method="_on_AttackCollide_body_entered"]
